--- a/views/socket.ejs
+++ b/views/socket.ejs
@@ -13,9 +13,20 @@
       #messages li:nth-child(odd) { background: #eee; }
     </style>
   </head>
-  <script src="bower_components/socket.io-client/dist/socket.io.js"></script>
+  <script src="/bower_components/socket.io-client/dist/socket.io.js"></script>
+  <script src="/bower_components/jquery/dist/jquery.min.js"></script>
   <script>
-    var socket = io();
+    $(function () {
+      var socket = io();
+      $('form').submit(function(){
+        socket.emit('chat message', $('#m').val());
+        $('#m').val('');
+        return false;
+      });
+      socket.on('chat message', function(msg){
+        $('#messages').append($('<li>').text(msg));
+      });
+    });
   </script>
   <body>
     <ul id="messages"></ul>
